added-image-downloading

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -6,3 +6,7 @@
   <button mat-raised-button color="accent" (click)="cancelEditing()">Cancel</button>
   <button mat-raised-button color="accent" (click)="savePolygon()">Save</button>
 </div>
+<div id="download">
+  <img #canvas>
+  <a #downloadLink></a>
+</div>
