--- a/src/app/dialogs/open-dialog/open-dialog.component.html
+++ b/src/app/dialogs/open-dialog/open-dialog.component.html
@@ -1,11 +1,13 @@
-<h1 mat-dialog-title>Open existing polygon</h1>
-<div mat-dialog-content>
-  <p>Please, enter polygon name</p>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.polygonName">
-  </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data.polygonName" cdkFocusInitial>Open</button>
+<div class="dialog">
+  <h1 mat-dialog-title>Open existing polygon</h1>
+  <div mat-dialog-content>
+    <p>Please, enter polygon name</p>
+    <mat-form-field>
+      <input matInput [(ngModel)]="data.polygonName">
+    </mat-form-field>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button (click)="onCancelClick()">Cancel</button>
+    <button mat-button [mat-dialog-close]="data.polygonName" cdkFocusInitial>Open</button>
+  </div>
 </div>
