--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,13 @@
   background: #eee;
 }
 
+.dialog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    text-align: center;
+  }
+}
+
