--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -4,8 +4,16 @@
     width: 100%;
     height: 500px;
   }
+
+  .select-map-type {
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    padding: 0 10px;
+    font-size: 10px;
+  }
 }
-  
+
 .buttons-container {
   display: flex;
   width: 100%;
