added display square

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,6 @@
+<div class="text-content" *ngIf="polygon?.map">
+  <h2>Calculated square: {{calculatedSquare}} m^2</h2>
+</div>
 <div class="map-container">
   <div #map class="map">
   </div>
